--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+.newspaper-container{
+    width: 700px;
+    margin:auto;
+    border-radius: 20%;
+    box-shadow: inset;
+    padding: 1em
+}
+
+.date {
+text-align: left;
+}
+h1 {
+    text-align: center;
+}
+nav {
+    width: 100%;
+    text-align: center;
+    border: 1px;
+    border-style: solid;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 10px;
+}
+nav li {
+    display:inline;
+    margin-right: 15px;
+}
