--- a/style.css
+++ b/style.css
@@ -43,5 +43,8 @@ section{
     display: inline-block;
     text-align: justify;
     width:300px;
-    margin: auto;
+    margin-right: 25px;
+}
+h5 {
+    color: red;
 }
